<resources>
    <string name="app_name">News</string>
    <string name="hint_title">Title</string>
    <string name="hint_description">Description</string>
    <string name="hint_author">Author</string>
    <string name="error_no_headlines_found">No headlines found for this query.</string>
    <string name="retry">Retry</string>
    <string name="error_result_could_not_be_loaded">Result could not be loaded.</string>
    <string name="contents_loading">Hang on, Contents loading..</string>
    <string name="could_not_refresh">Not Refreshed</string>
</resources>