<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/text_view_loading_headlines_footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contents_loading" />

        <ProgressBar
            android:id="@+id/progress_bar_headlines_footer"
            android:layout_width="wrap_content"
            android:indeterminateTint="@color/purple_700"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/text_view_error_headlines_footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_result_could_not_be_loaded" />

        <Button
            android:id="@+id/button_retry_headlines_footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retry" />
    </LinearLayout>

</layout>